-Client --Added month closing --Added env vars for cnotainer -Server --Added rates to monthindex --Added env vars for cnotainer -General --Updated open api
