# Server/MadExpencesTracer.Core/Interfaces/UseCase/IMonthClose.cs
@@ -4,6 +4,6 @@ namespace MadExpenceTracker.Core.Interfaces.UseCase
 {
     public interface IMonthClose
     {
-        MonthIndex CloseMonth(string monthToClose, Expences expences, Incomes incomes, Amount amount);
+        MonthIndex CloseMonth(string monthToClose, Guid expencesId, Guid incomesId);
     }
 }
