# Server/MadExpencesTracer.Core/UseCase/MonthClose.cs
@@ -2,6 +2,7 @@
 using MadExpenceTracker.Core.Interfaces.UseCase;
 using MadExpenceTracker.Core.Model;
 using MadExpenceTracker.Core.Persistence;
+using MadExpenceTracker.Core.Util;
 using System.Globalization;
 
 namespace MadExpenceTracker.Core.UseCase
@@ -29,13 +30,18 @@ namespace MadExpenceTracker.Core.UseCase
             _indexPersistence = indexPersistence;
         }
 
-        public MonthIndex CloseMonth(string monthToClose, Expences expences, Incomes incomes, Amount amount)
+        public MonthIndex CloseMonth(string monthToClose, Guid expencesId, Guid incomesId)
         {
             if(!DateTime.TryParseExact(monthToClose, "yyyy/MM", CultureInfo.InvariantCulture, DateTimeStyles.None,
                 out DateTime date))
             {
                 throw new ArgumentException("month to close couldn't be parsed");
             }
+
+            Configuration config = _configuration.GetConfiguration();
+            Expences expences = _expencePersistence.Get(expencesId) ?? throw new NotFoundException("");
+            Incomes incomes = _incomePersistence.Get(incomesId) ?? throw new NotFoundException("");
+            Amount amount = CalculateAmount(expences, incomes, config);
 
             CheckIfExpencesMonthIsClosed(date.ToString("yyyy/M"));
             CheckIfIncomesMonthIsClosed(date.ToString("yyyy/M"));
@@ -45,23 +51,24 @@ namespace MadExpenceTracker.Core.UseCase
                 CloseExpencesMonth(date.ToString("yyyy/M")) &&
                 CloseIncomesMonth(date.ToString("yyyy/M")))
             {
-                amount = CreateAmount(amount);
-                return CreateIndexEntry(expences, incomes, amount);
+                CreateAmount(amount);
+                return CreateIndexEntry(monthToClose, expencesId, incomesId, amount, config);
             }
             throw new MonthCloseException("failed to close the month");
         }
 
-        private MonthIndex CreateIndexEntry(Expences expences, Incomes incomes, Amount amount)
+        private MonthIndex CreateIndexEntry(string monthToClose, Guid expencesId, Guid incomesId, Amount amount, Configuration config)
         {
-            byte savingsRate = _configuration.GetConfiguration().SavingsRate;
             MonthIndex monthIndex = new MonthIndex()
             {
                 Id = Guid.NewGuid(),
-                ExpencesId = expences.Id,
-                IncomesId = incomes.Id,
+                ExpencesId = expencesId,
+                IncomesId = incomesId,
                 AmountsId = amount.Id,
-                Month = $"{DateTime.Now.Year}/{DateTime.Now.Month}",
-                SavingsRate = savingsRate
+                Month = monthToClose,
+                SavingsRate = config.SavingsRate,
+                AditionalExpencesRate= config.AditionalExpencesRate,
+                BaseExpencesRate = config.BaseExpencesRate,
             };
             _indexPersistence.AddMonthIndex(monthIndex);
             return monthIndex;
@@ -109,5 +116,11 @@ namespace MadExpenceTracker.Core.UseCase
                 throw new InvalidOperationException("Month of incomes is already closed");
             }
         }
+
+        private Amount CalculateAmount(Expences expences, Incomes incomes, Configuration configuration)
+        {
+            return Calculations.CalculateAmounts(expences, incomes, configuration);
+        }
+
     }
 }
